@@ -554,3 +554,26 @@ Playlist::video_content_at (DCPTime time) const
 
 	return false;
 }
+
+pair<double, double>
+Playlist::speed_up_range (int dcp_video_frame_rate) const
+{
+	pair<double, double> range (DBL_MAX, -DBL_MAX);
+
+	BOOST_FOREACH (shared_ptr<Content> i, _content) {
+		if (!i->video) {
+			continue;
+		}
+		if (i->video_frame_rate()) {
+			FrameRateChange const frc (i->video_frame_rate().get(), dcp_video_frame_rate);
+			range.first = min (range.first, frc.speed_up);
+			range.second = max (range.second, frc.speed_up);
+		} else {
+			FrameRateChange const frc (dcp_video_frame_rate, dcp_video_frame_rate);
+			range.first = min (range.first, frc.speed_up);
+			range.second = max (range.second, frc.speed_up);
+		}
+	}
+
+	return range;
+}
